[AIX-334] CR fixes
